# doforme

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
doforme/: __init__.py  cli.py  config.py
