[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doforme"
version = "0.1.0"
description = "A CLI tool that converts natural language to CLI commands using LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DoForMe Contributors"}
]
keywords = ["cli", "ai", "llm", "openai", "natural-language", "command-line"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: System :: Shells",
]
dependencies = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/doforme"
Repository = "https://github.com/yourusername/doforme"
Issues = "https://github.com/yourusername/doforme/issues"

[project.scripts]
doforme = "doforme.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["doforme*"]
